syntax = "proto3";

package syft.lib.torch;
import "proto/core/common/common_object.proto";
import "proto/lib/torch/tensor.proto";

message ValuesIndicesProto {
  syft.core.common.UID id = 1;
  string obj_type = 2;
  repeated string keys = 3;
  repeated syft.lib.torch.TensorData values = 4;
}
